<resources>
    <string name="app_name">ISG</string>
    <string name="Guest_Main_Help_Guide">Help guide</string>
    <string name="Input_Form">Input Form</string>
    <string name="Public_Property_Guide">Guide to Buying Public Property</string>
    <string name="Private_Property_Guide">Guide to Buying Private Property</string>
    <string name="Login_Form_Login">Login</string>
    <string name="District_Map">District Map</string>
    <string name="All_Calculator">Rent-or-Buy Calculator</string>
    <string name="Guide_Option">Guide Options</string>
    <string name="Register_Form_Register">Register</string>
    <string name="District_Control">District Control</string>
    <string name="Buy_or_Rent">Buy or Rent calculator</string>
    <string name="title_activity_help_guide_scroll">Help_guide_scroll</string>
    <string name="Property_Price">Property Price</string>
    <string name="Citizenship">Citizenship: </string>
    <string name="Help_text"> help guide to be added </string>
    <string name="Public_Property_Guide_text">public property guide to be added</string>
    <string name="Private_Property_Guide_text">private property guide to be added</string>
    <string name="Register_Success">Account Successfully Created!</string>
    <string name="All_Email">Email</string>
    <string name="All_Password">Password</string>
    <string name="All_Display_Name">Display Name</string>
    <string name="Name">Name</string>
    <string name="Message">Message</string>
    <string name="All_Post_Title">Post Title</string>
    <string name="Post_Listing_Form_Address">Address</string>
    <string name="Post_Listing_Form_Price">Price</string>
    <string name="All_District">District</string>
    <string name="Post_Listing_Form_No._of_Room">No. of Rooms</string>
    <string name="Post_Listing_Form_Size">Size (sqft)</string>
    <string name="Post_Listing_Form_Tenure">Tenure</string>
    <string name="Post_Listing_Form_Amenities">Amenities</string>
    <string name="All_Post_Price">Post Price</string>
    <string name="Single_Post_Listing_Price">Price: $</string>
    <string name="Single_Post_Listing_Address">Address: </string>
    <string name="Single_Post_Listing_District">District: </string>
    <string name="Single_Post_Listing_Size">Size (sqft): </string>
    <string name="Single_Post_Listing_No._of_Room">No. of Rooms: </string>
    <string name="Single_Post_Listing_Tenure">Tenure: </string>
    <string name="Single_Post_Listing_Amenities">Amenities: </string>
    <string name="All_Messages">View Messages</string>
    <string name="Start_Menu">Start Menu</string>
    <string name="Main_Menu">Main Menu</string>
    <string name="Listed_Property">Your Listed Property</string>
    <string name="Sign_Out">Sign Out</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Enter">Enter</string>
    <string name="Submit">Submit</string>
    <string name="Result">Result</string>
    <string name="All_Continue">Continue</string>
    <string name="District_Map_View_All">View All</string>
    <string name="Login_Form_Register_Transfer">Register here</string>
    <string name="Guest_Main_Start">Start</string>
    <string name="Help_Guide">User\'s Help Guide</string>
    <string name="All_View_Property">View Property</string>
    <string name="All_List_Property">Post Property</string>
    <string name="All_Calculate_Button">Calculate</string>
    <string name="District_1">City - Marina Area</string>
    <string name="District_2">City - CBD</string>
    <string name="District_3">Central South</string>
    <string name="District_4">South - Keppel</string>
    <string name="District_5">South West</string>
    <string name="District_6">City - City Hall</string>
    <string name="District_7">City- Beach Road</string>
    <string name="District_8">Central - Little India</string>
    <string name="District_9">Central - Orchard</string>
    <string name="District_10">Central: Tanglin</string>
    <string name="District_11">Central - Newton</string>
    <string name="District_12">Central - Toa Payoh</string>
    <string name="District_13">Central East</string>
    <string name="District_14">Central East - Eunos</string>
    <string name="District_15">East Coast - Katong</string>
    <string name="District_16">Upper East Coast</string>
    <string name="District_17">Far East - Changi</string>
    <string name="District_18">Far East - Tampines</string>
    <string name="District_19">North East - Hougang</string>
    <string name="District_20">Central North - AMK</string>
    <string name="District_21">Central West</string>
    <string name="District_22">Far West - Jurong</string>
    <string name="District_23">North West</string>
    <string name="District_24">Far North West</string>
    <string name="District_25">Far North</string>
    <string name="District_26">North</string>
    <string name="District_27">Far North - Yishun</string>
    <string name="District_28">North East - Seletar</string>
    <string-array name="district">
        <item>District 1 - City - Marina Area</item>
        <item>District 2 - City - CBD</item>
        <item>District 3 - Central South</item>
        <item>District 4 - South - Keppel</item>
        <item>District 5 - South West</item>
        <item>District 6 - City - City Hall</item>
        <item>District 7 - City- Beach Road</item>
        <item>District 8 - Central - Little India</item>
        <item>District 9 - Central - Orchard</item>
        <item>District 10 - Central: Tanglin</item>
        <item>District 11 - Central - Newton</item>
        <item>District 12 - Central - Toa Payoh</item>
        <item>District 13 - Central East</item>
        <item>District 14 - Central East - Eunos</item>
        <item>District 15 - East Coast - Katong</item>
        <item>District 16 - Upper East Coast</item>
        <item>District 17 - Far East - Changi</item>
        <item>District 18 - Far East - Tampines</item>
        <item>District 19 - North East - Hougang</item>
        <item>District 20 - Central North - AMK</item>
        <item>District 21 - Central West</item>
        <item>District 22 - Far West - Jurong</item>
        <item>District 23 - North West</item>
        <item>District 24 - Far North West</item>
        <item>District 25 - Far North</item>
        <item>District 26 - North</item>
        <item>District 27 - Far North - Yishun</item>
        <item>District 28 - North East - Seletar</item>
    </string-array>
    <string-array name="rooms">
        <item>1 Room</item>
        <item>2 Rooms</item>
        <item>3 Rooms</item>
        <item>4 Rooms</item>
        <item>5 Rooms</item>
    </string-array>
    <string-array name="tenure">
        <item>99 Years</item>
        <item>103 Years</item>
        <item>999 Years</item>
        <item>Freehold</item>
    </string-array>
    <string-array name="sell_rent">
        <item>Select Selling/Renting</item>
        <item>Selling</item>
        <item>Renting</item>
    </string-array>
    <string name="Stamp_Duty">STAMP DUTY</string>
    <string name="CPI">CONSUME PRICE INDEX</string>
    <string name="All_Stamp_Duty">Stamp Duty</string>
    <string name="All_Consumer_Price_Index">Consumer Price Index</string>
    <string name="Calculator_Form_Info">Please Fill in The Form</string>
    <string name="Calculator_Form_Name">Your Name</string>
    <string name="Calculator_Form_IC">Your IC/FIN</string>
    <string name="Calculator_Form_Period">Enter Duration of Stay in Years</string>
    <string name="Calculator_Form_Start_Date">Start of Stay</string>
    <string name="Calculator_Form_End_Date">End of Stay</string>
    <string name="Calculator_Form_Price_Input">Enter Price of Property</string>
    <string name="Down_Payment_in_Percent">Enter Down Payment in %</string>
    <string name="Calculator_Form_Down_Payment">Enter Down Payment</string>
    <string name="Calculator_Form_Mortage_Rate">Enter Mortgage Rate</string>
    <string name="Calculator_Form_Mortgage_Duration">Enter Mortgage Duration in Years</string>
    <string name="Calculator_Form_Investment_Growth_Rate">Enter Investment Growth</string>
    <string name="Calculator_Form_Annual_Value">Enter Annual Value of House</string>
    <string name="Calculator_Form_Maintainence_Fee">Enter Maintainence Fee</string>
    <string name="Calculator_Form_Monthly_Utilities">Enter Monthly Utilities</string>
    <string name="Calculator_Form_Home_Insurance">Enter HomeOwner\'s Insurance</string>
    <string name="Calculator_Form_Security_Deposit">Enter Security deposit</string>
    <string name="Calculator_Form_Broker_Fee">Enter Broker\'s Fee</string>
    <string name="Calculator_Form_Rental_Insurance">Enter Rental Insurance</string>
    <string name="Calculator_Form_First_Time_Text">Number of Purchases</string>
    <string name="Calculator_Form_Citizen_Text">Citizenship</string>
    <string name="Calculator_Form_Period_Text">Duration of Stay in Years</string>
    <string name="Calculator_Form_Price_Text">Price of Property</string>
    <string name="Calculator_Form_Down_Payment_Text">Down Payment in %</string>
    <string name="Calculator_Form_Mortage_Rate_Text">Mortgage Rate</string>
    <string name="Calculator_Form_Mortgage_Duration_Text">Mortgage Duration in Years</string>
    <string name="Calculator_Form_Investment_Growth_Rate_Text">Investment Growth</string>
    <string name="Calculator_Form_Annual_Value_Text">Annual Value of House</string>
    <string name="Calculator_Form_Maintainence_Fee_Text">Maintainence Fee</string>
    <string name="Calculator_Form_Monthly_Utilities_Text">Monthly Utilities</string>
    <string name="Calculator_Form_Home_Insurance_Text">HomeOwner\'s Insurance</string>
    <string name="Calculator_Form_Security_Deposit_Text">Security deposit</string>
    <string name="Calculator_Form_Broker_Fee_Text">Broker\'s Fee</string>
    <string name="Calculator_Form_Rental_Insurance_Text">Rental Insurance</string>
    <string name="Citizen0">Select Citizenship</string>
    <string name="Citizen1">Singaporean</string>
    <string name="Citizen2">Permanent Resident</string>
    <string name="Citizen3">Foreigner</string>
    <string name="Num_Time">Select Number of Purchases</string>
    <string name="First_Time">First Time Buyer</string>
    <string name="Second_Time">Second Time Buyer</string>
    <string name="Third_Time">More Than 2 Times Buyer</string>
</resources>