<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register__form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.soh.cz2006testapp.Register_Form">

    <EditText
        android:id="@+id/edit_text_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="120dp"
        android:background="@drawable/inputtextbox"
        android:hint="@string/All_Email"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edit_text_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="190dp"
        android:background="@drawable/inputtextbox"
        android:hint="@string/All_Password"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edit_text_register_display_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:ems="10"
        android:layout_marginTop="260dp"
        android:background="@drawable/inputtextbox"
        android:inputType="textPersonName"
        android:hint="@string/All_Display_Name"
        android:maxLines="1"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/Register_Form_Register"
        android:background="@drawable/buttons"
        android:textColorHint="@color/White"
        android:textSize="25sp" />

</RelativeLayout>
