<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login__form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.soh.cz2006testapp.Login_Form">

    <RelativeLayout
        android:id="@+id/login_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText android:id="@+id/edit_text_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/All_Email"
        android:layout_marginTop="130dp"
        android:background="@drawable/inputtextbox"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/edit_text_login_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/All_Password"
        android:ems="10"
        android:layout_marginTop="200dp"
        android:background="@drawable/inputtextbox"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/Login_Form_Login"
        android:background="@drawable/buttons"
        android:textColorHint="@color/White"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button_register_transfer"
        android:layout_height="60dp"
        android:layout_width="180dp"
        android:layout_marginTop="370dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/Login_Form_Register_Transfer"
        android:background="@drawable/buttons"
        android:textColorHint="@color/White"
        android:textSize="25sp"
        android:onClick="register"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_success"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    <TextView
        android:id="@+id/text_view_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/button_login_continue"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:hint="@string/All_Continue"
        android:background="@drawable/buttons"
        android:textColorHint="@color/White"
        android:textSize="25sp"
        android:onClick="loginContinue"/>

    </RelativeLayout>

</RelativeLayout>